@startuml

class AbstractTableModel {
  #bool indexIsValidAndInDataRange(const QModelIndex & index) const noexcept;
}


class SectionHeaderTableModel {
}

AbstractTableModel <|--SectionHeaderTableModel


class ProgramHeaderTableModel {
}

AbstractTableModel <|--ProgramHeaderTableModel

hide methods
hide attributes

@enduml
